crates/main/amethystate/tests/snapshots/entry_cell__write_an_interceptor_refused.snap
---
source: crates/main/amethystate/tests/entry_cell.rs
expression: shape(&err)
---
an interceptor rejected the change
├╴refused by an interceptor on the map
├╴map: app.widths
╰╴affects: app.widths.cpu
