crates/main/amethystate/tests/snapshots/entry_cell__write_to_a_removed_key.snap
---
source: crates/main/amethystate/tests/entry_cell.rs
expression: shape(&err)
---
nothing is stored at `cpu`
╰╴map: app.widths
