crates/main/amethystate/tests/snapshots/entry_cell__write_to_an_absent_key.snap
---
source: crates/main/amethystate/tests/entry_cell.rs
expression: shape(&err)
---
nothing is stored at `disk`
╰╴map: app.widths
